--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="name">Vikrant Godbole</h1>
             <div class="row">
                 <div class="col-md-6">
-                    <p><b><i class="fas fa-map-marker-alt"></i> Address :</b> B-1405 Menlo Homes, Near Audi Service Center, Hinjewadi Phase 2.</p>
+                    <p><b><i class="fas fa-map-marker-alt"></i> Address :</b> B-1405 Menlo Homes, Near Audi Service Center, Phase 2 Hinjawadi, Pune</p>
                 </div>
                 <div class="col-md-6">
                     <p><b><i class="fas fa-envelope"></i> Email :</b> godbole.vikrant@gmail.com</p>
@@ -112,7 +112,7 @@
                         -Send notifications and alerts. <br>
                         -Monitor system activity and performance.</p>
                     
-                    <p><b>Technologies Used:</b> <br> Front-End : HTML, CSS, JavaScript, and frameworks such as Bootstrap <br> Backend: JSP, Java. <br> Database: MySQL </p>
+                    <p><b>Technologies Used:</b> <br> Front-End : HTML, CSS, JavaScript, and frameworks such as Bootstrap <br> Backend: JSP, Java. <br> Database: MySQL <br> Server: Apache Tomcat </p>
                     <p><b>Benefits:</b> <br> -Improved patient satisfaction through easy appointment scheduling. <br>
                     -Reduced administrative workload for healthcare providers. <br>
                 -Minimized scheduling conflicts and no-shows. <br>
